3. {name},{department},{country},{city} variables in subject for mail "Support request from user"
4. Disabled department widget won't be shown. Option to show widget but then in content will be written "Department is disabled"

execute doc/update_db/update_72.sql for update

1.92v

Features
1. Option to have browser notification for new messages also not only for new chat request we have now. Can be found at "Synchronization and sound settings"
2. Messages line height adjusted
3. Submit button is disabled then user clicks it. I saw some duplicate chat request on demo. I ques users just did not waited enough after form submition.
4. Option to choose refresh interval on online users list.
5. {operator} variable in canned messages.
6. nodejs extension updated.

Bugfixes
1. FF browsers did not showed scrollbar in popup.
2. Then chat was accepted using chrome browser notification was not hidden automatically. Seems there was some internal browser API changes.
3. Some complex cases fixed then site is using https and in some places http. Read http://livehelperchat.com/how-to-configure-https-and-http-259a.html
4. Correct cache key for chatbox then memcached is used.

execute doc/update_db/update_71.sql for update

1.91v

Features
1. Option to set timeout for help tooltip
2. Option to set required e-mail for FAQ
3. E-mail notification for new FAQ item
4. Option to set secure parameter for cookies in chat module
5. Bulgarian and Romanian languages

execute doc/update_db/update_70.sql for update

1.90v

Features
1. Operator voting update upon user vote
2. Changed alert to confirm on new chat request. If user clicks ok. We open chat.
3. Datepicker for date fields.
4. Improved drag & drop logic. Now user won't be able to drag widget outside of it's viewport.
5. Option to have welcome tooltip

execute doc/update_db/update_69.sql for update

1.89v

Features
1. FAQ module supports identifiers and e-mail field. 
https://github.com/remdex/livehelperchat/issues/297