@@ -36,8 +36,10 @@ if (trim($form->msg) != '')
         // Set last message ID
         if ($Chat->last_msg_id < $msg->id) {
 
-        	if ($Chat->status == erLhcoreClassModelChat::STATUS_PENDING_CHAT) {
-        		$Chat->status = erLhcoreClassModelChat::STATUS_ACTIVE_CHAT;        		
+        	if ($userData->invisible_mode == 0) {
+	        	if ($Chat->status == erLhcoreClassModelChat::STATUS_PENDING_CHAT) {
+	        		$Chat->status = erLhcoreClassModelChat::STATUS_ACTIVE_CHAT;        		
+	        	}
         	}
 
         	if ($Chat->user_status == erLhcoreClassModelChat::USER_STATUS_CLOSED_CHAT) {
