@@ -32,6 +32,9 @@ if (isset($_POST['Update_account']))
 		'HideMyStatus' => new ezcInputFormDefinitionElement(
 				ezcInputFormDefinitionElement::OPTIONAL, 'boolean'
 		), 
+		'UserInvisible' => new ezcInputFormDefinitionElement(
+				ezcInputFormDefinitionElement::OPTIONAL, 'boolean'
+		), 
    		'JobTitle' => new ezcInputFormDefinitionElement(
    				ezcInputFormDefinitionElement::OPTIONAL, 'unsafe_raw'
    		),
@@ -138,7 +141,13 @@ if (isset($_POST['Update_account']))
     } else {
     	$UserData->hide_online = 0;
     }
-
+    
+    if ( $form->hasValidData( 'UserInvisible' ) && $form->UserInvisible == true ) {
+    	$UserData->invisible_mode = 1;
+    } else {
+    	$UserData->invisible_mode = 0;
+    }
+    
     if (count($Errors) == 0)
     {
         $UserData->setPassword($form->Password);
