@@ -5,6 +5,8 @@ Features
 2. Option to assign pro active invitations to particular users. Just enter users id's separated by comma. Perhaps in some far feature i will add more user friendly assigment workflow, or someone will suport it :)
 3. {name},{department},{country},{city} variables in subject for mail "Support request from user"
 4. Disabled department widget won't be shown. Option to show widget but then in content will be written "Department is disabled"
+5. Invisible mode. This allows to open chat without influencing chat status. To operator has to be assigned "Users, groups management" => "Allow user to change his visibility mode"
+6. Option to change chat status. To operator has to be assigned "Chat" => "Allow user to change chat status" permission.
 
 execute doc/update_db/update_72.sql for update
 
